external-crates/move/crates/move-compiler/tests/move_2024/naming/index_fun_invalid_redefinition.exp
error[E02015]: invalid attribute
  ┌─ tests/move_2024/naming/index_fun_invalid_redefinition.move:9:16
  │
6 │     public fun index_s(s: &S): &S { s }
  │                ------- This syntax method was previously defined here.
7 │ 
8 │     #[syntax(index)]
  │              ----- 'index' 'syntax' annotation appears here
9 │     public fun index_s2(s: &S): &S { s }
  │                ^^^^^^^^ Redefined 'index' 'syntax' method for '0x42::m::S'

error[E02015]: invalid attribute
   ┌─ tests/move_2024/naming/index_fun_invalid_redefinition.move:15:16
   │
12 │     public fun index_mut_s(s: &mut S): &mut S { s }
   │                ----------- This syntax method was previously defined here.
13 │ 
14 │     #[syntax(index)]
   │              ----- mutable 'index' 'syntax' annotation appears here
15 │     public fun index_mut_s2(s: &mut S): &mut S { s }
   │                ^^^^^^^^^^^^ Redefined mutable 'index' 'syntax' method for '0x42::m::S'

