external-crates/move/crates/move-compiler/tests/move_2024/naming/index_fun_invalid_redefinition.move
module 0x42::m {

    public struct S {}

    #[syntax(index)]
    public fun index_s(s: &S): &S { s }

    #[syntax(index)]
    public fun index_s2(s: &S): &S { s }

    #[syntax(index)]
    public fun index_mut_s(s: &mut S): &mut S { s }

    #[syntax(index)]
    public fun index_mut_s2(s: &mut S): &mut S { s }


}
